# MHZipy

./: generate_test_license.cjs  package-lock.json  package.json  translations.json  update_explorer.cjs  update_locales.cjs  update_search.cjs
public/: viewer.html
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  license.rs  main.rs  mft.rs
src/FileExplorer/: ErrorDialog.tsx  FileExplorer.css  FileExplorer.tsx  FileList.tsx  FolderTree.tsx
src/Menu/: Menu.css  Menu.tsx  PreferenceDialog.css  PreferenceDialog.tsx
src/PDFViewer/: PDFViewer.tsx
src/Preference/: PreferenceDialog.css  PreferenceDialog.tsx
src/SearchView/: SearchView.tsx
src/command/: fileOperations.ts
src/common/: ConfirmDialog.tsx  MessageDialog.css  MessageDialog.tsx
src/locales/: ar.json  bn.json  cs.json  de-AT.json  de.json  el.json  en.json  es.json  fr.json  id.json  it.json  ja.json  km.json  ko.json  lo.json  mn.json  my.json  pl.json  ru.json  th.json  tr.json  vi.json  yue.json  zh-TW.json  zh.json
src/utils/: config.ts  fileOps.ts  indexedDB.ts  storage.ts
