[package]
name = "mhzipy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mhzipy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
zip = { version = "2.2", features = ["deflate", "aes-crypto"] }
walkdir = "2"
open = "5.0"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Ioctl", "Win32_System_Threading", "Win32_Security", "Win32_System_IO"] }
dashmap = { version = "5.5", features = ["rayon"] } # 멀티스레드 환경에서 안전한 Map
rayon = "1.8"   # 병렬 처리용
trash = "3.3"
